--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,4 +1,4 @@
-• Sending a video in a chat? You can now see the duration before you hit send.
+• Een video in een gesprek verzenden? Je kan nu de lengte zien voor je op verzenden tipt.
 • You can now view tax receipts for your Signal Sustainer and Boost donations. Receipts are generated locally for your privacy, and therefore will only be available for future donations. Thanks for supporting Signal!
 • We tweaked some text throughout the app to make things a little clearer.
 • We squashed a couple of annoying crashes.
